# streamtui

./: .clippy.toml  2026-01-13-command-messageinitcommand-message.txt  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  rustfmt.toml
specs/: addons.md  cast.md  cli.md  implementation_plan.md  readme.md  search.md  subtitles.md  torrent.md  tui.md
src/: app.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs
src/api/: mod.rs  tmdb.rs  torrentio.rs
src/stream/: cast.rs  mod.rs  player.rs  subtitles.rs  torrent.rs
src/ui/: browser.rs  detail.rs  mod.rs  player.rs  search.rs  subtitles.rs  theme.rs
tests/: cast_test.rs  cli_test.rs  e2e_test.rs  mod.rs  subtitles_test.rs  tmdb_test.rs  torrent_test.rs  torrentio_test.rs  ui_test.rs
