[package]
name = "streamtui"
version = "0.1.0"
edition = "2021"
description = "Cyberpunk TUI for streaming to Chromecast"
authors = ["Gorka & Hermes"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
urlencoding = "2"
local-ip-address = "0.6"
dirs = "5"
toml = "0.8"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
futures = "0.3"

[[bin]]
name = "streamtui"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
